--- a/app/views/discounts/_form.html.erb
+++ b/app/views/discounts/_form.html.erb
@@ -13,7 +13,7 @@
   
   <div class="field">
     <%= f.label "Imagen de la promoción" %><br>
-    <%= f.file_field :avatar, as: :file %>
+    <%= f.attachment_field :image %>
   </div>
   <div class="field">
     <%= f.label "Titulo" %><br>
