--- a/app/views/jokes/show.html.erb
+++ b/app/views/jokes/show.html.erb
@@ -1,14 +1,20 @@
-<p id="notice"><%= notice %></p>
+<!-- Page Content -->
+    <div class="container">
 
-<p>
-  <strong>Like:</strong>
-  <%= @joke.like %>
-</p>
+      <!-- Page Heading -->
+      <hr />
+      <!-- Project One -->
+      <div class="row">
+        <div class="col-md-7">
+          <a href="#">
+            <%= image_tag attachment_url(@joke, :joke_image, :fill, 300, 300, format: "jpg") %>
+          </a>
+        </div>
+        <div class="col-md-5">
+          <%= link_to "Volver", jokes_path, :class => "btn btn-warning" %>
+        </div>
+      </div>
 
-<p>
-  <strong>Dislike:</strong>
-  <%= @joke.dislike %>
-</p>
-
-<%= link_to 'Edit', edit_joke_path(@joke) %> |
-<%= link_to 'Back', jokes_path %>
+      <!-- /.row -->
+      
+    </div>
